Added a new step in our app in the landing page info section

--- a/templates/home.html
+++ b/templates/home.html
@@ -47,9 +47,15 @@
                     <h3>Signup for Free</h3>
                     <p>Register with your email and Phone number and you will be ready to start.</p>
                 </section>
-    
+
                 <section>
                     <img src="{{ url_for('static', filename= 'images/woman-using-phone.png')}}" alt="people-using-phone">
+                    <h3>Appointment</h3>
+                    <p>Book ideal time for you to do the survey</p>
+                </section>
+    
+                <section>
+                    <img src="{{ url_for('static', filename= 'images/Dodosurveys.png')}}" alt="people-using-phone">
                     <h3>Survey</h3>
                     <p>Answer Our Survey Questions.</p>
                 </section>
