--- a/templates/signup.html
+++ b/templates/signup.html
@@ -29,12 +29,17 @@
             <label for="last_name">Last Name:</label>
             <input type="text" id="last_name" name="last_name" required>
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
+            <input type="email" id="email" name="email" required>        
             <label for="phone_number">
                 Phone Number: &nbsp;
                 <img src="{{ url_for('static', filename='USA-Flag-icon.png') }}" alt="USA" title="United States" style="height: 35px; width: 35px; vertical-align: middle;">
             </label>
-            <input type="tel" id="phone_number" name="phone_number" pattern="[+1]-[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder=" +1-xxx-xxx-xxxx" required>            
+            <input type="tel" id="phone_number" name="phone_number" pattern="+1-[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="+1-xxx-xxx-xxxx" required>
+            <small>Format:(+1-212-555-1212) </small><br><br>    
+            <label for="state">State:</label>
+            <input type="text" id="state" name="state" required>
+            <label for="city">City:</label>
+            <input type="text" id="city" name="city" required>                
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
             <small>Password must meet the following requirements:</small>
