Added a link where a user cab change their phone number

--- a/templates/verify_popup.html
+++ b/templates/verify_popup.html
@@ -25,6 +25,9 @@
             <input type="text" id="verification_code" name="verification_code"required>
             <button class="button" type="submit">Enter</button>
         </form>
+        <p>Incorrect Phone Number?
+            <a href="{{ url_for('login')}}">Change </a> Phone Number
+        </p>
         
         <!--Start of Tawk.to Script-->
         <script type="text/javascript">
