--- a/templates/change_phone_number.html
+++ b/templates/change_phone_number.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.png')}}">
+
 
     <title>Verify Phone</title>
 </head>
@@ -28,29 +30,17 @@
             <small>Format:(+1-212-555-1212) </small><br><br>   
             <button class="button" type="submit">Change Phone Number</button>
         </form>
-        
-        <!--Start of Tawk.to Script-->
-        <script type="text/javascript">
-            var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-            (function(){
-            var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-            s1.async=true;
-            s1.src='https://embed.tawk.to/65bcab468d261e1b5f5b2d3a/1hlkfq3cj';
-            s1.charset='UTF-8';
-            s1.setAttribute('crossorigin','*');
-            s0.parentNode.insertBefore(s1,s0);
-            })();
-            </script>
-            <!--End of Tawk.to Script-->
 
     </div>
-    <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
+    <script src="{{ url_for('static', filename='index.js') }}"></script>
+
+   <!--Start of Tawk.to Script-->
+<script type="text/javascript">
     var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
     (function(){
     var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
     s1.async=true;
-    s1.src='https://embed.tawk.to/65bcab468d261e1b5f5b2d3a/1hlkfq3cj';
+    s1.src='https://embed.tawk.to/65da30d49131ed19d9713d6b/1hne4tgul';
     s1.charset='UTF-8';
     s1.setAttribute('crossorigin','*');
     s0.parentNode.insertBefore(s1,s0);
