--- a/templates/main.html
+++ b/templates/main.html
@@ -18,6 +18,7 @@
             </a>
     
             <nav class="navbar">
+                <a href="{{ url_for('book_appointment') }}">Book Appointment</a>
                 <a href="{{ url_for('wallet')}}">Wallet</a>
                 <a href="{{ url_for('profile')}}">Profile</a>
                 <a href="{{ url_for('about')}}" target="_blank">About</a>
