--- a/templates/home.html
+++ b/templates/home.html
@@ -32,7 +32,10 @@
 
         <div class="home">
             <a href="{{ url_for('register')}}">
-                <img src="{{ url_for('static', filename='landing_page.png') }}" alt="logo">
+                <picture>
+                    <source media="(max-width: 768px)" srcset="{{ url_for('static', filename='mobile_landing_page.png') }}">
+                    <img src="{{ url_for('static', filename='landing_page.png') }}" alt="logo">
+                  </picture>
             </a>
         </div>
 
